# libsLinux

./: README.md  pyproject.toml
libsLinux/GSASII/: G2compare.py  GSASII.py  GSASIIElemGUI.py  GSASIIdata.py  GSASIIddataGUI.py  GSASIIlog.py  GSASIImapvars.py  GSASIIplot.py  GSASIIsasd.py  GSASIIspc.py  SUBGROUPS.py  bootstrap.py  kSUBGROUPSMAG.py  makeTutorial.py  unit_tests.py
libsLinux/GSASII/.svn/: wc.db
libsLinux/GSASII/bindist/: Build.notes.txt
libsLinux/GSASII/exports/: G2export_FIT2D.py  G2export_image.py  G2export_map.py  G2export_shelx.py
libsLinux/GSASII/imports/: G2img_ADSC.py  G2img_CheMin.py  G2img_EDF.py  G2img_GE.py  G2img_HDF5.py  G2img_MAR.py  G2img_Rigaku.py  G2img_SFRM.py  G2img_SumG2.py  G2phase_INS.py  G2phase_rmc6f.py  G2pwd_BrukerRAW.py  G2pwd_FP.py  G2pwd_GPX.py  G2pwd_Panalytical.py  G2pwd_csv.py  G2pwd_fxye.py  G2pwd_rigaku.py  G2pwd_xye.py  G2rfd_Panalytical.py  G2rfd_xye.py  G2sad_xye.py  G2sfact.py
libsLinux/lib/: libgfortran.so.4  libifcoremt.so.5  libifport.so.5  libintlc.so.5
